Bug 349813 - Krdc numblock is working inverse
Summary: Krdc numblock is working inverse
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: RDP (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-02 07:53 UTC by Tom
Modified: 2025-07-19 20:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom 2015-07-02 07:53:25 UTC
I have the impression that is wrong since the Kubuntu 15.04 upgrade, but I'm not sure about that. Target system: Windows Server 2012R2. 

when i start xfreerdp directly (cmd below) its working correct.

xfreerdp -decorations /w:1920 /h:1200 /kbd:0x00000807 /u:<username> /parent-window:106954797 /bpp:24 /audio-mode:0 /drive:media /media /network:lan /rfx /cert-ignore +clipboard /port:3389 /v:<servername>

Qt: 4.8.6
KDE Development Platform: 4.14.6
KRDC: 4.14.6

cat /etc/debian_version 
jessie/sid

uname -a 
Linux <hostname> 3.19.0-21-generic #21-Ubuntu SMP Sun Jun 14 18:31:11 UTC 2015 x86_64 x86_64 x86_64 GNU/Linux


Reproducible: Always

Steps to Reproduce:
1. Connect to Win Server via RDP with Numlock on
2. Test Numblock keys -> not working
3. Set Numlock off -> Numblock keys working.


Expected Results:  
correctly working Numlock key
Comment 1 Tom 2016-03-09 14:22:11 UTC
it's not always inverse. sometimes its working normal. I guess there should be some sort of check if the Numlock Key is active or not after connection and set it to the right state.
Comment 2 Vaso 2016-10-25 09:00:44 UTC
I think it should be a simple option like /numlock-on in xfreerdp. But this is an upstream FR.
Comment 3 Andreas Skoglund 2017-12-01 12:28:41 UTC
*** This bug has been confirmed by popular vote. ***
Comment 4 Tom 2018-02-07 08:00:19 UTC
★⋰⋱★⋰⋱★⋰⋱★⋰⋱★
★ Happy Birthday  ★
★⋱⋰★⋱⋰★⋱⋰★⋱⋰★
Comment 5 Vaso 2018-02-07 09:52:16 UTC
(In reply to Tom from comment #4)
> ★⋰⋱★⋰⋱★⋰⋱★⋰⋱★
> ★ Happy Birthday  ★
> ★⋱⋰★⋱⋰★⋱⋰★⋱⋰★

+1
Comment 6 Vaso 2018-02-07 09:57:08 UTC
This annoying bug and suddenly "sticky" Control key make our users mad. We have to use remmina. (Remmina, in KDE, really?)
Comment 7 Petr Kovács 2020-04-07 19:27:39 UTC
I can confirm this bug - after connecting to a remote Windows server with KRDC, the numlock status is often inversed to actual numlock status of my linux desktop.

Operating System: Gentoo Linux
KRDC Version: 19.12.3 
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.1
Comment 8 RM 2025-05-18 07:09:21 UTC
Reporting numlock state still inverted with wayland + krdc 25.04 + Plasma 6.3.5.
Comment 9 Bug Janitor Service 2025-07-19 09:56:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/krdc/-/merge_requests/205
Comment 10 Fabio 2025-07-19 20:32:51 UTC
Git commit 1b11b2e3f51bbaea5fa10f3103006669a7b29145 by Fabio Bas.
Committed on 19/07/2025 at 20:28.
Pushed by ctrlaltca into branch 'master'.

Use KModifierKeyInfo to detect *lock modifiers' status

RDP: sync {caps,num,lock}lock keystate to remote session on start and at every focusIn

M  +4    -1    CMakeLists.txt
M  +1    -0    core/CMakeLists.txt
M  +34   -0    core/remoteview.cpp
M  +16   -0    core/remoteview.h
R  +2    -1    org.kde.krdc.desktop.cmake [from: org.kde.krdc.desktop - 098% similarity]
M  +24   -0    rdp/rdpsession.cpp
M  +2    -0    rdp/rdpsession.h
M  +9    -0    rdp/rdpview.cpp
M  +1    -0    rdp/rdpview.h

https://invent.kde.org/network/krdc/-/commit/1b11b2e3f51bbaea5fa10f3103006669a7b29145