Use KModifierKeyInfo to detect *lock modifiers' status

RDP: sync {caps,num,lock}lock keystate to remote session on start and at every focusIn

BUG: 349813